--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,7 @@ body, html{
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
-    /* background-size: cover;   */
+    background-size: cover;  
 }
 
 body nav{
