--- a/src/style_menu.css
+++ b/src/style_menu.css
@@ -53,12 +53,12 @@ a{
     background-size: cover;  
 }
 
-/* a:hover{
+a:hover{
     text-decoration: underline;
     text-decoration-color: green;
     text-decoration-thickness: 5px;
     text-underline-offset: 52px;
-} */
+}
 
 li{
     padding-left: 3%;
