--- a/src/style_menu.css
+++ b/src/style_menu.css
@@ -89,8 +89,13 @@ li{
 }
 
 .dishes h2{
+    font-size: 5vh;
     padding-top: 3%;
     font-family: 'Lobster', cursive;
+}
+
+.dishes h3{
+    font-size: 2vh;
 }
 
 .dishes p{
@@ -110,4 +115,27 @@ li{
     background-color: black;
     width: 100%;
     height: 20vh;
+}
+
+.add{
+    display: block;
+    margin: 0;
+    position: fixed;
+    left:-20px;
+    top:50%;
+    /* height: 8vh; */
+    transform: rotate(90deg);
+    color:black;
+}
+
+.add h1{
+    background-color: pink;
+}
+
+.add .additives{
+    display: none;
+}
+
+.add h1:hover + additives{
+    display: block;
 }
