--- a/src/style_contact.css
+++ b/src/style_contact.css
@@ -140,7 +140,8 @@ a:hover{
     text-decoration: underline;
     text-decoration-color: green;
     text-decoration-thickness: 5px;
-    text-underline-offset: 52px;}
+    text-underline-offset: 5.7vh;
+}
 
 li{
     padding-left: 3%;
