--- a/src/style_menu.css
+++ b/src/style_menu.css
@@ -136,7 +136,7 @@ li{
     left:-42vh;
     top:25%;
     color:black;
-    transition: 1s ease-in-out;
+    transition: 0.5s ease-in-out;
     background-color: white;
     box-shadow: 1vh 1vh 1vh pink;
 }
@@ -157,13 +157,13 @@ li{
 
 .slider div{
     text-align: center;
-    padding: 15%;
+    padding: 10%;
 }
 
 .slider p{
     font-family: 'Fjalla One', sans-serif;
-    padding: 5%;
-    font-size: 2.5vh;
+    padding: 3%;
+    font-size: 2vh;
 }
 
 .slider h2{
@@ -171,38 +171,55 @@ li{
     font-family: 'Lobster', cursive;
 }
 
-.button_drinks{
+.button_drinks button{
+    background-color: white;
+    border: none;
+    font-family: 'Lobster', cursive;
     position:absolute;
-    right:25vh;
-    top:110vh;
+    width:40vh;
+    right:8vh;
+    top:108vh;
+    font-size:3vh;
+    cursor: pointer;
+    border-radius: 5px;
 }
+
+.button_drinks button:hover{
+    background-color: pink;
+    transition: 1s ease-in-out;
+
+}
+
 
 #slider_drinks{
     visibility: visible;
     /* opacity: 0;
     transition: visibility 0s, opacity 0.5s linear; */
     width: 40vh;
-    height: 60vh;
+    height: 50vh;
     background-color: white;
     box-shadow: 1vh 1vh 1vh 1vh pink;
     text-align: center;
     position:absolute;
     right:8vh;
     top:113vh;
+    backface-visibility: hidden;
 }
 
 #drinks_back{
     visibility: hidden;
-    /* opacity: 0;
-    transition: visibility 0s, opacity 0.5s linear; */
+    /* opacity: 0; */
+    transition: visibility 0s, opacity 0.5s linear;
     width: 40vh;
-    height: 60vh;
+    height: 50vh;
     background-color: white;
     box-shadow: 1vh 1vh 1vh 1vh pink;
     text-align: center;
     position:absolute;
     right:8vh;
     top:113vh;
+    /* transform: rotateX(-180deg); */
+    backface-visibility: hidden;
 
 }
 
