--- a/src/style_contact.css
+++ b/src/style_contact.css
@@ -65,6 +65,12 @@ li{
     float: left;
 }
 
+.middle{
+    font-family: 'Lobster', cursive;
+    float: left;
+    margin-left: 23%;
+}
+
 .right{
     float: right;
 }
