--- a/src/style_menu.css
+++ b/src/style_menu.css
@@ -69,6 +69,12 @@ li{
     float: left;
 }
 
+.middle{
+    font-family: 'Lobster', cursive;
+    float: left;
+    margin-left: 23%;
+}
+
 .right{
     float: right;
 }
