--- a/src/style_menu.css
+++ b/src/style_menu.css
@@ -72,7 +72,7 @@ li{
 .middle{
     font-family: 'Lobster', cursive;
     float: left;
-    margin-left: 23%;
+    margin-left: 20%;
 }
 
 .right{
@@ -238,4 +238,20 @@ li{
     padding: 2%;
 }
 
+.category button{
+    margin-left: 1% ;
+    background-image: url(../plusicon.jpg);
+    background-size: cover;
+    width:2vh;
+    height:2vh;
+}
 
+#addForm{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top:0%;
+    left:0%;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.7);
+}
