--- a/src/style.css
+++ b/src/style.css
@@ -69,16 +69,21 @@ li{
 }
 
 .left{
+    width:15%;
     float: left;
 }
 
 .middle{
+    width:10%;
+    text-shadow: 2px 3px rgb(235, 170, 180);
+    text-align: center;
     font-family: 'Lobster', cursive;
     float: left;
-    margin-left: 23%;
 }
 
 .right{
+    text-align: right;
+    width:15%;
     float: right;
 }
 
