--- a/src/style_menu.css
+++ b/src/style_menu.css
@@ -66,16 +66,21 @@ li{
 }
 
 .left{
+    width:15%;
     float: left;
 }
 
 .middle{
+    width:10%;
+    text-align: center;
+    text-shadow: 2px 3px rgb(235, 170, 180);
     font-family: 'Lobster', cursive;
     float: left;
-    margin-left: 20%;
 }
 
 .right{
+    text-align: right;
+    width:15%;
     float: right;
 }
 
@@ -177,49 +182,95 @@ li{
     font-family: 'Lobster', cursive;
 }
 
-.button_drinks button{
-    background-color: white;
-    border: none;
-    font-family: 'Lobster', cursive;
-    position:absolute;
-    width:40vh;
-    right:8vh;
-    top:108vh;
-    font-size:3vh;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
 .button_drinks button:hover{
     background-color: pink;
     transition: 1s ease-in-out;
 
 }
 
-
-#slider_drinks{
-    visibility: visible;
-    width: 40vh;
-    /* height: 50vh; */
+.button_drinks button{
     background-color: white;
-    box-shadow: 1vh 1vh 1vh 1vh pink;
-    text-align: center;
-    position:absolute;
-    right:8vh;
-    top:113vh;
+    border: none;
+    font-family: 'Lobster', cursive;
+    font-size:5vh;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
-#drinks_back{
-    visibility: hidden;
-    width: 40vh;
-    /* height: 50vh; */
-    background-color: white;
-    box-shadow: 1vh 1vh 1vh 1vh pink;
-    text-align: center;
-    position:absolute;
-    right:8vh;
-    top:113vh;
+@media (min-width: 1600px) {
+    #slider_drinks{
+        visibility: visible;
+        width: 40vh;
+        /* height: 50vh; */
+        background-color: white;
+        box-shadow: 1vh 1vh 1vh 1vh pink;
+        text-align: center;
+        position:absolute;
+        right:8vh;
+        top:113vh;
+    }
 
+    #drinks_back{
+        visibility: hidden;
+        width: 40vh;
+        /* height: 50vh; */
+        background-color: white;
+        box-shadow: 1vh 1vh 1vh 1vh pink;
+        text-align: center;
+        position:absolute;
+        right:8vh;
+        top:113vh;
+    
+    }
+
+    .button_drinks button{
+        position:absolute;
+        width:40vh;
+        right:8vh;
+        top:108vh;
+    }
+}
+
+
+@media (max-width: 1599px) {
+
+    .drinks{
+        display: flex;
+        justify-content: center;
+    }
+
+    .containerDrinks{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .containerDrinks div{
+        grid-row-start: 1;
+        grid-column-start: 1;
+    }
+
+    #slider_drinks{
+        visibility: visible;
+        width: 60vh;
+        background-color: white;
+        box-shadow: 1vh 1vh 1vh 1vh pink;
+        text-align: center;
+    }
+
+    #drinks_back{
+        visibility: hidden;
+        width: 60vh;
+        background-color: white;
+        box-shadow: 1vh 1vh 1vh 1vh pink;
+        text-align: center;
+    }
+
+
+    .button_drinks button{
+        width:60vh;
+        margin-bottom: 3vh;
+        margin-top: 3vh;
+    }
 }
 
 #slider_drinks p{
