--- a/src/style_menu.css
+++ b/src/style_menu.css
@@ -47,7 +47,7 @@ a{
     right: 0;
     position: absolute;
     z-index: -1; 
-    height: 70%;
+    height: 75vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;  
@@ -106,7 +106,8 @@ li{
 }
 
 .dishes h3{
-    font-size: 2vh;
+    font-size: 3vh;
+    color:rgb(150, 107, 114);
 }
 
 .dishes p{
@@ -207,7 +208,7 @@ li{
         text-align: center;
         position:absolute;
         right:8vh;
-        top:113vh;
+        top:115vh;
     }
 
     #drinks_back{
@@ -219,8 +220,7 @@ li{
         text-align: center;
         position:absolute;
         right:8vh;
-        top:113vh;
-    
+        top:115vh;
     }
 
     .button_drinks button{
@@ -228,6 +228,7 @@ li{
         width:40vh;
         right:8vh;
         top:108vh;
+        font-size: 4vh;
     }
 }
 
