--- a/src/style.css
+++ b/src/style.css
@@ -10,17 +10,6 @@ body, html{
 }
 
 .bg{
-    /* background-image: url(ramen2.jpg); */
-    /* opacity: 0.6; */
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-
-
-.bg::after{
     content: "";
     background: 
     linear-gradient(
@@ -28,13 +17,7 @@ body, html{
           rgba(0, 0, 0, 0.1)
         ),
     url(ramen2.jpg);
-
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1; 
+    z-index: -1;
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -43,60 +26,133 @@ body, html{
 
 body nav{
     background-color: white;
-    /* padding: 3%; */
-}
-
-.navbar{
-    font-size: 25px;
-    list-style-type: none;
-    padding: 3%;
-    padding-bottom: 5%;
-}
-
-a{
-    text-decoration: none;
-    color:black;
-}
-
-a:hover{
-    text-decoration: underline;
-    text-decoration-color: green;
-    text-decoration-thickness: 5px;
-    text-underline-offset: 5.8vh;
-}
-
-li{
-    padding-left: 3%;
-    padding-right: 3%;
-}
-
-.left{
-    width:15%;
-    float: left;
-}
-
-.middle{
-    width:10%;
-    text-shadow: 2px 3px rgb(235, 170, 180);
-    text-align: center;
-    font-family: 'Lobster', cursive;
-    float: left;
-}
-
-.right{
-    text-align: right;
-    width:15%;
-    float: right;
 }
 
 body h1{
-    margin:0;
-    padding:0;
+    padding-top:230px;
+    /* padding-bottom: 14%; */
     display: block;
-    font-size: 150px;
+    font-size: 16vw;
     text-align: center;
     color:white;
-    margin-top: 15%;
+}
+
+@media screen and (min-width:1001px){
+
+    .navbar{
+        font-size: 25px;
+        list-style-type: none;
+        padding: 3%;
+        padding-bottom: 5%;
+    }
+        
+    a{
+        text-decoration: none;
+        color:black;
+        }
+        
+    a:hover{
+        text-decoration: underline;
+        text-decoration-color: green;
+        text-decoration-thickness: 5px;
+        text-underline-offset: 5.7vh;
+        }
+        
+    li{
+        padding-left: 3%;
+        padding-right: 3%;
+        }
+        
+    .left{
+        width:15%;
+        float: left;
+        }
+        
+    .middle{
+        width:10%;
+        text-align: center;
+        text-shadow: 2px 3px rgb(235, 170, 180);
+        font-family: 'Lobster', cursive;
+        float: left;
+        }
+        
+    .right{
+        text-align: right;
+        width:15%;
+        float: right;
+    }
+
+    .navbar-toggle {
+        display: none;
+    }
+
+    .close-toggle{
+        display: none;
+    }
+}
+
+
+@media screen and (max-width:1000px){
+        
+    .navbar{
+        font-size: 25px;
+        list-style-type: none;
+        padding: 3%;
+        padding-bottom: 5%;
+        display: none;
+        }
+        
+    a{
+        text-decoration: none;
+        color:black;
+    }
+
+    a:hover{
+        color:pink;
+        transition: 0.3s;
+    }
+
+    li{
+        text-align: center;
+        margin: 15px auto;
+    }
+
+    .navbar-toggle{
+        display: block;
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        cursor: pointer;
+        color: black;
+        font-size: 24px;
+        }
+
+    .close-toggle{
+        display: none;
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        cursor: pointer;
+        color: black;
+        font-size: 24px;  
+    }
+
+    .middle{
+        display: none;
+    }
+
+    body h1{
+        padding-top:160px;
+        /* padding-bottom: 14%; */
+        display: block;
+        font-size: 18vw;
+        text-align: center;
+        color:white;
+    }
+}
+
+.activeNavbar {
+    display: block;
 }
 
 
