--- a/src/style_contact.css
+++ b/src/style_contact.css
@@ -3,9 +3,7 @@
     font-family: 'Lobster', cursive;
     color: white;
     /* background-color: rgba(255, 255, 255, 0.7); */
-    margin-top: 8%;
-    margin-left: 30%;
-    margin-right: 30%;
+    /* margin: 10%; */
     padding: 5%;
 }
 
@@ -13,6 +11,9 @@
     display: grid;
     grid-column: 1fr 1fr;
     font-size:2vh;
+    margin:10%;
+    margin-top: 15%;
+    line-height: 1.2;
 }
 
 .left-side{
